# findTDE

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  find_tde  multi_tde.py  pyproject.toml  vasp_vel_write.py
docs/: Development.rst  GaN_findTDE_example.ipynb  Installation.rst  Makefile  Tutorials.rst  conf.py  dev_todo.md  findtde.defect_analysis.rst  findtde.io.rst  findtde.multi_tde.rst  findtde.plotting.rst  findtde.rst  findtde.tde_analysis.rst  findtde.utils.rst  findtde.vasp_vel_write.rst  index.rst  requirements.txt
docs/source/: conf.py  index.rst
examples/: GaN_findTDE_example.ipynb
examples/AlN/: AlN_TDE_example.md
examples/GaN/: GaN_TDE_example.md  gan_vasp_pseudo_keys.csv  sph_directions.csv
examples/GaN/1L_ga34/: KE_calcs_list.txt
examples/GaN/1L_ga34/33eV/: POSCAR
examples/GaN/1L_ga34/34eV/: KPOINTS
examples/GaN_LAMMPS/: GaN_LAMMPS_TDE_example.md  all_tde_data_lmp.csv  gan_lmp_errs_run_info.txt  gan_lmp_pseudo_keys.csv  latt_dirs_to_calc.csv  sph_directions_ext_set1.csv  sph_directions_ext_set2.csv  sph_directions_ext_set3.csv
examples/GaN_LAMMPS/176S_ga34_lmp/: 176S_ga34_data.csv  176S_ga34_out.txt  KE_calcs_list.txt
examples/GaN_LAMMPS/176S_ga34_lmp/10eV/: POSCAR  dump.final  log.lammps  read_data.lmp  slurm-6231657.out
examples/GaN_LAMMPS/176S_ga34_lmp/18eV/: POSCAR  dump.final  log.lammps  read_data.lmp  slurm-6231924.out
examples/GaN_LAMMPS/176S_ga34_lmp/26eV/: POSCAR  dump.final  log.lammps  read_data.lmp  slurm-6232421.out
examples/GaN_LAMMPS/176S_ga34_lmp/30eV/: POSCAR  dump.final  input.tde  log.lammps  read_data.lmp  slurm-6233480.out
examples/GaN_LAMMPS/176S_ga34_lmp/32eV/: POSCAR  dump.final  log.lammps  read_data.lmp  slurm-6233955.out
examples/GaN_LAMMPS/inp/: AlGaN.sw  AlN.tersoff  GaN.tersoff  INCAR_cgm  INCAR_md  KPOINTS  read_data_perfect.lmp
examples/GaN_VASP/: GaN_TDE_example.md  all_tde_data.csv  latt_dirs_to_calc.csv  latt_dirs_to_calc_ALL.csv
examples/GaN_VASP/1L_ga34/: 1L_ga34_data.csv  1L_ga34_out.txt
examples/GaN_VASP/inp/: POSCAR
findTDE/: defect_analysis.py  defect_characterization.py  find_tde  multi_tde.py  poscar2lmp.py  tde_analysis.py
findtde/: __init__.py  cli.py  find_tde  io.py  multi_tde.py  plotting.py  poscar2lmp.py  run_ftde.slurm  tde_analysis.py  utils.py  vasp_vel_write.py
findtde/cli/: __init__.py  main.py  main_functions.py
(+29 files in other folders)
